[gd_scene load_steps=8 format=2]

[ext_resource path="res://FirstApp/uavalibleskin.png" type="Texture" id=1]
[ext_resource path="res://FirstApp/Skin.png" type="Texture" id=2]
[ext_resource path="res://maps/back.png" type="Texture" id=3]
[ext_resource path="res://FirstApp/SpaceNav.png" type="Texture" id=4]
[ext_resource path="res://FirstApp/Galaxy.jpg" type="Texture" id=5]
[ext_resource path="res://maps/watch2.png" type="Texture" id=6]
[ext_resource path="res://selectNave.gd" type="Script" id=7]

[node name="selectNave" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
position = Vector2( 513.036, 301.06 )
scale = Vector2( 0.408565, 0.393595 )
texture = ExtResource( 5 )

[node name="standardSkin" type="TextureButton" parent="."]
margin_left = 189.382
margin_top = 183.802
margin_right = 221.382
margin_bottom = 215.802
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="TextureButton" parent="."]
margin_left = 667.758
margin_top = 192.768
margin_right = 707.758
margin_bottom = 232.768
rect_scale = Vector2( 4, 4 )
disabled = true
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 690.437
margin_top = 472.47
margin_right = 990.437
margin_bottom = 572.47
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 15.1191
margin_top = 417.034
margin_right = 378.119
margin_bottom = 431.034
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 13
text = "If  you need  tha skin you need to wacth  a video!"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watch" type="TextureButton" parent="Control"]
margin_left = 52.9167
margin_top = 471.211
margin_right = 352.917
margin_bottom = 571.211
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="standardSkin" to="." method="_on_standardSkin_pressed"]
[connection signal="pressed" from="Skin" to="." method="_on_Skin_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Control/watch" to="." method="_on_watch_pressed"]
